[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open = "3"
inquire = "0.5.3"
reqwest = { version = "0.11.13", features = ["json", "native-tls"]}
futures = "0.3.25"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.149", features = ["derive"] }
toml = "0.5.10"
snailshell = "0.3.1"
crossterm = "0.26.0"
figlet-rs = "0.1.4"
serde_json = "1.0"
url = "2.2"
clap = "4.3.0"
rustyline = "11.0.0"